<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie+ (6002CEM)</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cnf_password">Confirm Password</string>
    <string name="signout">Sign Out</string>

    <string name="bottom_nav_home_label">Home</string>
    <string name="bottom_nav_map_label">Location</string>
    <string name="bottom_nav_qrcode_label">QR Code Ticket</string>
    <string name="bottom_nav_profile_label">Profile</string>
    <string name="bottom_nav_language_label">Language</string>

    <string name="item_release">Release</string>
    <string name="item_duration">Duration</string>

    <string name="location_latitude">Latitude</string>
    <string name="location_longitude">Longitude</string>
    <string name="location_currentLocation">Current Location</string>

    <string name="profile_img_desc">Profile Image</string>
    <string name="profile_email_label_text">Email</string>
    <string name="profile_mobile_label_text">Mobile Number</string>

    <string name="item_detail_image_desc">Movie Poster</string>
    <string name="item_details_like_btn_desc">Like Button</string>
    <string name="item_details_info_label_text">Info</string>
    <string name="item_details_release_label_text">Release</string>
    <string name="item_details_duration_label_text">Duration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>