<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outlined_home_24"
        android:title="@string/bottom_nav_home_label" />
    <item
        android:id="@+id/mapFragment"
        android:enabled="true"
        android:icon="@drawable/ic_location"
        android:title="@string/bottom_nav_map_label"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bottom_nav_profile_label" />
    <item
        android:id="@+id/languageFragment"
        android:enabled="true"
        android:icon="@drawable/ic_language"
        android:title="@string/bottom_nav_language_label"/>
</menu>
