<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ProfileFragment">

    <include
        android:id="@+id/profile_top_app_bar"
        layout="@layout/layout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_top_app_bar"
        android:background="@color/black">

        <TextView
            android:id="@+id/profile_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:textColor="@color/gold"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image_view"
            app:layout_constraintStart_toEndOf="@+id/profile_image_view"
            app:layout_constraintTop_toTopOf="@+id/profile_image_view"
            app:layout_constraintVertical_bias="0.525"
            tools:text="User Name" />

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/profile_img_desc"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/profile_email_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:text="@string/profile_email_label_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_outline_email_24"
            app:drawableTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_view" />

        <TextView
            android:id="@+id/profile_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="16dp"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_email_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/profile_email_label_tv"
            app:layout_constraintTop_toTopOf="@+id/profile_email_label_tv"
            app:layout_constraintVertical_bias="0.0"
            tools:text="somemail@example.com" />

        <TextView
            android:id="@+id/profile_mobile_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:text="@string/profile_mobile_label_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_outline_phone_android_24"
            app:drawableTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_email_label_tv" />

        <TextView
            android:id="@+id/profile_mobile_tv"
            android:layout_width="115dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_mobile_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toEndOf="@+id/profile_mobile_label_tv"
            app:layout_constraintTop_toTopOf="@+id/profile_mobile_label_tv"
            app:layout_constraintVertical_bias="0.464"
            tools:text="1234 5678" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>